/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

edition = "2023";

package mobileharness.infra.master.central;

import "src/devtools/mobileharness/api/model/proto/device.proto";
import "src/devtools/mobileharness/api/model/proto/job.proto";
import "src/devtools/mobileharness/infra/master/central/proto/quota.proto";
import "src/devtools/mobileharness/infra/master/central/proto/test.proto";

option features.field_presence = IMPLICIT;
option java_package = "com.google.devtools.mobileharness.infra.master.central.proto";
option java_outer_classname = "Job";

// TODO: Send the job start time from Client and save in Master.

message JobProfile {
  // Required.
  .mobileharness.api.model.JobFeature feature = 1;

  // Required.
  .mobileharness.api.model.JobSetting setting = 2;

  // Optional.
  repeated .mobileharness.api.model.JobFile file = 3;

  // Optional.
  map<string, string> param = 4;
}

message JobCondition {
  // Required.
  int64 heartbeat_time_ms = 1;

  enum JobStatus {
    UNSET = 0;
    RUNNING = 1;
    DONE = 2;
    KILLED = 3;
  }

  // Optional.
  JobStatus status = 2;

  // Required: When the job is added to the Master.
  int64 create_time_ms = 3;

  // Optional: When the job is completed.
  int64 end_time_ms = 4;

  // Optional: Max time that a job can live in Central without heartbeats. It
  // should not be less than 5 minutes.
  int64 keep_alive_timeout_ms = 5;
}

// Allocation conditions of a job.
// Next ID: 7
message JobAllocations {
  message TestAllocation {
    // Required.
    string test_id = 1;

    // At least one device is included.
    repeated .mobileharness.api.model.DeviceLocator allocated_device_locator =
        2;

    // Allocation latency stats.
    message Stats {
      // Required
      TestAllocationLatencyType scheduler_latency_type = 1;

      // Required. The latency contributed by the Scheduler itself. Calculation
      // method: http://b/71722259#comment3.
      int64 scheduler_latency_ms = 2;

      // Required. The duration for how long the test is suspended due to quota
      // issues.
      int64 central_suspended_duration_ms = 3;
    }

    // Required.
    Stats stats = 3;

    // Optional. Quota related information of this test allocation. Only
    // meaningful for shared lab traffic.
    QuotaResult quota_result = 4;
  }

  repeated TestAllocation allocated_test = 1;

  // Whether the job killed by user is being killed in Master.
  bool is_being_killed = 4;
  repeated string unknown_test = 2;
  repeated string closed_test = 3;
  repeated string suspended_test = 5;
  repeated string allocating_test = 6;
}
